--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "chalk": "^1.1.3",
+    "filesize": "^3.5.10",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^3.0.1",
     "lodash": "^4.17.4",
