--- a/package.json
+++ b/package.json
@@ -1,46 +1,64 @@
 {
-  "name": "nmmes-backend",
-  "version": "0.0.1",
-  "description": "A video encoder/transcoder.",
-  "author": "Ayrton Sparling",
-  "license": "LGPL-3.0",
-  "engines": {
-    "node": ">=6.4.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --env=development --watch",
-    "build": "webpack --define process.env.NODE_ENV=\"production\" --env=production --progress"
-  },
-  "main": "nmmes-backend.js",
-  "dependencies": {
-    "bluebird": "^3.5.0",
-    "chalk": "^1.1.3",
-    "filesize": "^3.5.10",
-    "fluent-ffmpeg": "^2.1.2",
-    "fs-extra": "^3.0.1",
-    "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "moment-duration-format": "^1.3.0",
-    "npm-query": "^1.1.0",
-    "query-string": "^4.3.4",
-    "rxjs": "^5.4.0",
-    "semver": "^5.3.0",
-    "source-map-support": "^0.4.15",
-    "tracer": "^0.8.9"
-  },
-  "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-preset-es2016": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.24.1",
-    "babel-runtime": "^6.23.0",
-    "eslint": "^3.19.0",
-    "source-map-loader": "^0.2.1",
-    "webpack": "^2.5.1",
-    "webpack-node-externals": "^1.6.0"
-  }
+    "name": "nmmes-backend",
+    "version": "0.0.1",
+    "description": "A video encoder/transcoder.",
+    "author": "Ayrton Sparling",
+    "license": "LGPL-3.0",
+    "engines": {
+        "node": ">=6.4.0"
+    },
+    "scripts": {
+        "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm test",
+        "dev": "webpack --env=development --watch",
+        "test": "mocha-webpack --webpack-config webpack.config.babel.js --recursive --ui tdd src test",
+        "build": "webpack --define process.env.NODE_ENV=\"production\" --env=production --progress"
+    },
+    "main": "nmmes-backend.js",
+    "dependencies": {
+        "bluebird": "^3.5.0",
+        "chalk": "^1.1.3",
+        "filesize": "^3.5.10",
+        "fluent-ffmpeg": "^2.1.2",
+        "fs-extra": "^3.0.1",
+        "lodash": "^4.17.4",
+        "moment": "^2.18.1",
+        "moment-duration-format": "^1.3.0",
+        "npm-query": "^1.1.0",
+        "query-string": "^4.3.4",
+        "rxjs": "^5.4.0",
+        "semver": "^5.3.0",
+        "source-map-support": "^0.4.15",
+        "tracer": "^0.8.9"
+    },
+    "devDependencies": {
+        "babel-core": "^6.24.1",
+        "babel-eslint": "^7.2.3",
+        "babel-loader": "^7.0.0",
+        "babel-plugin-istanbul": "^4.1.4",
+        "babel-plugin-module-resolver": "^2.7.1",
+        "babel-preset-es2016": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "babel-register": "^6.24.1",
+        "babel-runtime": "^6.23.0",
+        "chai": "^4.0.2",
+        "cross-env": "^5.0.1",
+        "eslint": "^3.19.0",
+        "istanbul": "^0.4.5",
+        "mocha": "^3.4.2",
+        "mocha-webpack": "azhang/mocha-webpack#patch-1-built",
+        "nyc": "^11.0.2",
+        "source-map-loader": "^0.2.1",
+        "webpack": "^2.5.1",
+        "webpack-node-externals": "^1.6.0"
+    },
+    "nyc": {
+        "include": [
+            "src/**/*.js"
+        ],
+        "instrument": false,
+        "sourceMap": false,
+        "require": [
+            "babel-register"
+        ]
+    }
 }
