--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.1",
     "description": "A video encoder/transcoder.",
     "author": "Ayrton Sparling",
-    "license": "LGPL-3.0",
+    "license": "MIT",
     "engines": {
         "node": ">=6.4.0"
     },
@@ -14,6 +14,10 @@
         "build": "webpack --define process.env.NODE_ENV=\"production\" --env=production --progress"
     },
     "main": "nmmes-backend.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/NMMES/nmmes-backend.git"
+    },
     "dependencies": {
         "bluebird": "^3.5.0",
         "chalk": "^1.1.3",
