--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nmmes-backend",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "A modular video encoder/transcoder.",
     "author": "Ayrton Sparling",
     "license": "MIT",
@@ -10,7 +10,8 @@
     "scripts": {
         "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm test",
         "dev": "webpack --env=development --watch",
-        "test": "git submodule foreach git pull origin master && mocha-webpack --webpack-config webpack.config.babel.js --recursive --ui tdd src test",
+        "update-submodules": "git submodule foreach git pull origin master",
+        "test": "npm run update-submodules && mocha-webpack --webpack-config webpack.config.babel.js --recursive --ui tdd --check-leaks src test",
         "build": "webpack --define process.env.NODE_ENV=\"production\" --env=production --progress"
     },
     "main": "dist/nmmes-backend.js",
@@ -19,40 +20,40 @@
         "url": "https://github.com/NMMES/nmmes-backend.git"
     },
     "dependencies": {
-        "bluebird": "^3.5.0",
-        "chalk": "^1.1.3",
+        "bluebird": "^3.5.1",
+        "chalk": "^2.1.0",
         "filesize": "^3.5.10",
         "fluent-ffmpeg": "^2.1.2",
-        "fs-extra": "^3.0.1",
+        "fs-extra": "^4.0.2",
         "lodash": "^4.17.4",
-        "moment": "^2.18.1",
+        "moment": "^2.19.1",
         "moment-duration-format": "^1.3.0",
         "npm-query": "^1.1.0",
-        "query-string": "^4.3.4",
-        "semver": "^5.3.0",
-        "source-map-support": "^0.4.15",
-        "tracer": "^0.8.9"
+        "query-string": "^5.0.0",
+        "semver": "^5.4.1",
+        "source-map-support": "^0.5.0",
+        "tracer": "^0.8.11"
     },
     "devDependencies": {
-        "babel-core": "^6.24.1",
-        "babel-eslint": "^7.2.3",
-        "babel-loader": "^7.0.0",
-        "babel-plugin-istanbul": "^4.1.4",
+        "babel-core": "^6.26.0",
+        "babel-eslint": "^8.0.1",
+        "babel-loader": "^7.1.2",
+        "babel-plugin-istanbul": "^4.1.5",
         "babel-plugin-module-resolver": "^2.7.1",
         "babel-preset-es2016": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
-        "babel-register": "^6.24.1",
-        "babel-runtime": "^6.23.0",
-        "chai": "^4.0.2",
+        "babel-register": "^6.26.0",
+        "babel-runtime": "^6.26.0",
+        "chai": "^4.1.2",
         "chai-as-promised": "^7.1.1",
-        "cross-env": "^5.0.1",
-        "eslint": "^3.19.0",
+        "cross-env": "^5.1.0",
+        "eslint": "^4.9.0",
         "istanbul": "^0.4.5",
-        "mocha": "^3.4.2",
-        "mocha-webpack": "azhang/mocha-webpack#patch-1-built",
-        "nyc": "^11.0.2",
-        "source-map-loader": "^0.2.1",
-        "webpack": "^2.5.1",
+        "mocha": "^4.0.1",
+        "mocha-webpack": "^1.0.0-rc.1",
+        "nyc": "^11.2.1",
+        "source-map-loader": "^0.2.2",
+        "webpack": "^3.8.1",
         "webpack-node-externals": "^1.6.0"
     },
     "nyc": {
