--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "node": ">=9.0.0"
     },
     "scripts": {
-        "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text npm test",
         "dev": "webpack --env=development --watch",
         "update-submodules": "git submodule foreach git pull origin master",
         "test": "npm run update-submodules && mocha-webpack --webpack-config webpack.config.babel.js --recursive --ui tdd --check-leaks src test",
@@ -20,7 +19,6 @@
         "url": "https://github.com/NMMES/nmmes-backend.git"
     },
     "dependencies": {
-        "bluebird": "^3.5.1",
         "chalk": "^2.1.0",
         "filesize": "^3.5.10",
         "fluent-ffmpeg": "^2.1.2",
@@ -28,11 +26,9 @@
         "lodash": "^4.17.4",
         "moment": "^2.19.1",
         "moment-duration-format": "^1.3.0",
-        "npm-query": "^1.1.0",
-        "query-string": "^5.0.0",
+        "nmmes-tracer": "^0.0.1",
         "semver": "^5.5.0",
-        "source-map-support": "^0.5.0",
-        "tracer": "^0.8.11"
+        "source-map-support": "^0.5.0"
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
@@ -44,13 +40,8 @@
         "babel-preset-stage-2": "^6.24.1",
         "babel-register": "^6.26.0",
         "babel-runtime": "^6.26.0",
-        "chai": "^4.1.2",
-        "chai-as-promised": "^7.1.1",
-        "cross-env": "^5.1.0",
         "eslint": "^4.9.0",
         "istanbul": "^0.4.5",
-        "mocha": "^4.0.1",
-        "mocha-webpack": "^1.0.0-rc.1",
         "nyc": "^11.2.1",
         "source-map-loader": "^0.2.2",
         "webpack": "^3.8.1",
