--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,8 @@
 {
     "env": {
         "es6": true,
-        "node": true,
-        "mocha": true
+        "node": true
     },
-    "extends": ["eslint:recommended"],
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2017,
