--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
         "node": ">=9.0.0"
     },
     "scripts": {
-        "dev": "webpack --env=development --watch",
-        "update-submodules": "git submodule foreach git pull origin master",
-        "test": "npm run update-submodules && mocha-webpack --webpack-config webpack.config.babel.js --recursive --ui tdd --check-leaks src test",
-        "build": "webpack --env=production --progress"
+        "dev": "webpack-cli --mode=development --watch",
+        "build": "webpack-cli --mode=production --progress"
     },
     "main": "dist/nmmes-backend.js",
     "repository": {
@@ -19,42 +17,31 @@
         "url": "https://github.com/NMMES/nmmes-backend.git"
     },
     "dependencies": {
+        "anitomyjs": "git+https://github.com/NMMES/node.anitomy.js.git",
         "chalk": "^2.1.0",
         "filesize": "^3.5.10",
         "fluent-ffmpeg": "^2.1.2",
-        "fs-extra": "^4.0.2",
-        "lodash": "^4.17.4",
+        "fs-extra": "^5.0.0",
+        "lodash.merge": "^4.6.1",
         "moment": "^2.19.1",
-        "moment-duration-format": "^1.3.0",
-        "nmmes-tracer": "^0.0.1",
+        "moment-duration-format": "^2.2.2",
+        "nmmes-tracer": "0.0.2",
         "semver": "^5.5.0",
         "source-map-support": "^0.5.0"
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
-        "babel-eslint": "^8.0.1",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-istanbul": "^4.1.5",
-        "babel-plugin-module-resolver": "^2.7.1",
+        "babel-eslint": "^8.2.2",
+        "babel-loader": "^7.1.4",
+        "babel-plugin-module-resolver": "^3.1.0",
         "babel-preset-es2016": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
         "babel-register": "^6.26.0",
         "babel-runtime": "^6.26.0",
-        "eslint": "^4.9.0",
-        "istanbul": "^0.4.5",
-        "nyc": "^11.2.1",
-        "source-map-loader": "^0.2.2",
-        "webpack": "^3.8.1",
+        "eslint": "^4.19.0",
+        "source-map-loader": "^0.2.3",
+        "webpack": "^4.1.1",
+        "webpack-cli": "^2.0.12",
         "webpack-node-externals": "^1.6.0"
-    },
-    "nyc": {
-        "include": [
-            "src/**/*.js"
-        ],
-        "instrument": false,
-        "sourceMap": false,
-        "require": [
-            "babel-register"
-        ]
     }
 }
