--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "url": "https://github.com/NMMES/nmmes-backend.git"
     },
     "dependencies": {
-        "anitomyjs": "git+https://github.com/NMMES/node.anitomy.js.git",
+        "anitomyjs": "^1.4.4",
         "chalk": "^2.1.0",
         "filesize": "^3.5.10",
         "fluent-ffmpeg": "^2.1.2",
