--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "prepare": "npm run build",
         "dev": "webpack-cli --mode=development --watch",
         "build": "webpack-cli --mode=production --progress",
-        "postversion": "git push"
+        "postversion": "git push && npm publish"
     },
     "main": "dist/nmmes-backend.js",
     "repository": {
@@ -26,7 +26,7 @@
         "lodash.merge": "^4.6.1",
         "moment": "^2.19.1",
         "moment-duration-format": "^2.2.2",
-        "nmmes-tracer": "0.0.2",
+        "nmmes-tracer": "0.0.3",
         "semver": "^5.5.0",
         "source-map-support": "^0.5.0"
     },
@@ -39,10 +39,10 @@
         "babel-preset-stage-2": "^6.24.1",
         "babel-register": "^6.26.0",
         "babel-runtime": "^6.26.0",
-        "eslint": "^4.19.0",
+        "eslint": "^4.19.1",
         "source-map-loader": "^0.2.3",
-        "webpack": "^4.1.1",
-        "webpack-cli": "^2.0.12",
+        "webpack": "^4.2.0",
+        "webpack-cli": "^2.0.13",
         "webpack-node-externals": "^1.6.0"
     }
 }
