--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,16 @@
 {
     "sourceMaps": true,
+    "plugins": [
+        "transform-class-properties"
+    ],
     "presets": [
-        "es2016",
-        "stage-2"
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "node": "10",
+                }
+            }
+        ]
     ]
 }
