--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "scripts": {
         "prepare": "npm run build",
+        "test": "universalis-tester ./test/index.js",
         "dev": "webpack-cli --mode=development --watch",
         "build": "webpack-cli --mode=production --progress",
         "postversion": "git push && npm publish"
@@ -19,30 +20,28 @@
         "url": "https://github.com/NMMES/nmmes-backend.git"
     },
     "dependencies": {
-        "chalk": "^2.3.2",
+        "chalk": "^2.4.1",
         "filesize": "^3.6.1",
         "fluent-ffmpeg": "^2.1.2",
-        "fs-extra": "^5.0.0",
+        "fs-extra": "^7.0.0",
         "lodash.merge": "^4.6.1",
-        "moment": "^2.19.1",
+        "moment": "^2.22.2",
         "moment-duration-format": "^2.2.2",
         "nmmes-tracer": "0.0.4",
-        "semver": "^5.5.0",
-        "source-map-support": "^0.5.0"
+        "semver": "^5.5.1",
+        "source-map-support": "^0.5.9"
     },
     "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-eslint": "^8.2.2",
-        "babel-loader": "^7.1.4",
-        "babel-plugin-module-resolver": "^3.1.0",
-        "babel-preset-es2016": "^6.24.1",
-        "babel-preset-stage-2": "^6.24.1",
-        "babel-register": "^6.26.0",
-        "babel-runtime": "^6.26.0",
-        "eslint": "^4.19.1",
-        "source-map-loader": "^0.2.3",
-        "webpack": "^4.2.0",
-        "webpack-cli": "^2.0.13",
-        "webpack-node-externals": "^1.6.0"
+        "@babel/core": "^7.0.0",
+        "@babel/preset-env": "^7.0.0",
+        "babel-eslint": "^9.0.0",
+        "babel-loader": "^8.0.0",
+        "babel-plugin-module-resolver": "^3.1.1",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "eslint": "^5.4.0",
+        "source-map-loader": "^0.2.4",
+        "webpack": "^4.17.1",
+        "webpack-cli": "^3.1.0",
+        "webpack-node-externals": "^1.7.2"
     }
 }
