--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,7 @@
 {
     "env": {
-        "es6": true,
         "node": true
     },
-    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2017,
         "sourceType": "module",
@@ -12,7 +10,7 @@
         }
     },
     "rules": {
-        "no-console": "off",
+        "no-console": "warn",
         "no-duplicate-case": "off",
         "no-unused-vars": "warn"
     }
