--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
     "author": "Ayrton Sparling",
     "license": "MIT",
     "engines": {
-        "node": ">=9.0.0"
+        "node": ">=8.0.0"
     },
     "scripts": {
-        "prepare": "npm run build",
-        "test": "universalis-tester ./test/index.js",
         "postversion": "git push && npm publish"
     },
     "main": "src/index.js",
@@ -32,10 +30,6 @@
     "devDependencies": {
         "eslint": "^5.7.0",
         "must": "^0.13.4",
-        "source-map-loader": "^0.2.4",
-        "universalis-tester": "0.0.5",
-        "webpack": "^4.22.0",
-        "webpack-cli": "^3.1.2",
-        "webpack-node-externals": "^1.7.2"
+        "source-map-loader": "^0.2.4"
     }
 }
